(lang dune 3.10)

(name html-parser)
(source (uri git://github.com/maxtori/html-parser))
(license MIT)
(authors "Maxime Levillain <maxime.levillain@functori.com>")
(maintainers "maxime.levillain@functori.com")
(homepage "https://github.com/maxtori/html-parser")
(bug_reports "https://github.com/maxtori/html-parser/issues")

(package
 (name html-parser)
 (synopsis "Simple HTML parser")
 (depends ppxlib)
)
